--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "last 3 versions"
   ],
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write --ignore-unknown"
+    ]
   },
   "author": "Asacolips",
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
     "glob": "^10.3.10",
     "husky": "^9.0.11",
     "inquirer": "^9.2.15",
     "lint-staged": "^15.2.2",
-    "prettier": "3.2.5",
+    "prettier": "^3.2.5",
     "prompt": "^1.3.0",
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
