--- a/package.json
+++ b/package.json
@@ -6,16 +6,11 @@
     "build": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --no-source-map",
     "watch": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --source-map --watch",
     "generate": "node src/generate-falloutzero-system.mjs",
-    "prepare": "husky init && husky install",
-    "pre-commit": "lint-staged"
+    "prepare": "husky install"
   },
   "browserslist": [
     "last 3 versions"
   ],
-  "lint-staged": {
-    "*.{js,mjs}": "eslint --cache --fix",
-    "*.{js,css,md,hbs}": "prettier --write"
-  },
   "author": "Asacolips",
   "license": "MIT",
   "private": true,
@@ -23,7 +18,7 @@
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "glob": "^10.3.10",
-    "husky": "^8.0.0",
+    "husky": "^9.0.11",
     "inquirer": "^9.2.15",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
@@ -31,5 +26,9 @@
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
     "sass": "^1.53.0"
+  },
+  "lint-staged": {
+    "*.{js,mjs}": "eslint --cache --fix",
+    "*.{js,css,md,hbs}": "prettier --write"
   }
 }
