--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --no-source-map",
     "watch": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --source-map --watch",
     "generate": "node src/generate-falloutzero-system.mjs",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "browserslist": [
     "last 3 versions"
@@ -26,9 +26,5 @@
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
     "sass": "^1.53.0"
-  },
-  "lint-staged": {
-    "*.{js,mjs}": "eslint --cache --fix",
-    "*.{js,css,md,hbs}": "prettier --write"
   }
 }
