--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
     "sass": "^1.53.0"
+  },
+  "lint-staged": {
+    "*.{js,mjs}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{js,mjs,hbs}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
