--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --no-source-map",
     "watch": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --source-map --watch",
-    "generate": "node src/generate-falloutzero-system.mjs",
-    "prepare": "husky"
+    "generate": "node src/generate-falloutzero-system.mjs"
   },
   "browserslist": [
     "last 3 versions"
@@ -15,16 +14,30 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "glob": "^10.3.10",
+    "globals": "^15.2.0",
     "husky": "^9.0.11",
     "inquirer": "^9.2.15",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "pretty-quick": "^4.0.0",
     "prompt": "^1.3.0",
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
     "sass": "^1.53.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,mjs,hbs}": [
+      "pretty-quick --staged",
+      "eslint --fix"
+    ]
   }
 }
