--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --no-source-map",
     "watch": "sass src/scss/falloutzero.scss css/falloutzero.css --style=expanded --source-map --watch",
     "generate": "node src/generate-falloutzero-system.mjs",
-    "prepare": "husky && husky install"
+    "prepare": "husky"
   },
   "browserslist": [
     "last 3 versions"
