--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-config-prettier": "^9.1.0",
     "glob": "^10.3.10",
     "globals": "^15.2.0",
-    "husky": "^9.0.11",
     "inquirer": "^9.2.15",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
@@ -28,10 +27,14 @@
     "prompt": "^1.3.0",
     "renamer": "^5.0.0",
     "replace": "^1.2.2",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "simple-git-hooks": "^2.11.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,mjs,css,md,hbs}": "prettier --write"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
