--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,8 +24,7 @@ jobs:
         uses: battila7/get-version-action@v2
 
       - name: Create zip archive
-        working-directory: dist
-        run: zip -r ./module.zip system.json assets/ css/ lang/ lib/ module/ packs/ /templates
+        run: zip -r ./dist/module.zip system.json LICENSE.txt assets/ css/ lang/ lib/ module/ packs/ /templates --exclude "packs/_source/*"
 
       - name: Update release with files
         id: create_version_release
